--- a/projeto_filme/web/index.html
+++ b/projeto_filme/web/index.html
@@ -2,18 +2,142 @@
 <html>
 
 <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Projeto Filme</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <link rel="stylesheet" href="./css/style.css">
+    <title> WEB III </title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+
 </head>
 
 <body>
 
-    <a href="profile.jsp">Perfil</a>
-    
+    <div class="mt-4 text-center container col-sm-10 col-md-6">
+        <h1> Cadastro </h1>
+
+        <form action="usuario-controller" method="post" class="validar" novalidate>
+
+            <input type="hidden" name="pagina" value="cadastro">
+
+            <div class="form-floating mt-3">
+                <input type="text" id="nome" name="nome" class="form-control" placeholder="Nome completo" required
+                    minlength="6">
+                <label for="nome"> Nome completo </label>
+
+                <small class="invalid-feedback text-start">
+                    O nome precisa conter no mínimo 6 caracteres.
+                </small>
+            </div>
+
+            <div class="form-floating mt-3">
+                <input type="email" id="email" name="email" class="form-control" placeholder="email@exemplo.com"
+                    required>
+                <label for="email"> Email </label>
+
+                <small class="invalid-feedback text-start">
+                    O endereço precisa conter '@' e um domínio (exemplo@email.com).
+                </small>
+            </div>
+
+            <div class="form-floating mt-3">
+                <input type="date" id="nasc" name="nasc" class="form-control" required>
+                <label for="nasc"> Data de nascimento </label>
+
+                <small class="invalid-feedback text-start">
+                    O usuário precisa ter no mínimo 12 anos.
+                </small>
+            </div>
+
+            <div class="form-floating mt-3">
+                <input type="password" id="senha" name="senha" class="form-control" placeholder="Senha" required
+                    minlength="6" pattern="^(?=.[A-Z])(?=.\d)(?=.*[^\w\s]).{6,}$" onkeyup="validarSenha()">
+                <label for="senha"> Senha </label>
+
+                <div class="invalid-feedback text-start">
+                    <small>
+                        A senha precisa ter:
+                    </small>
+                    <ul class="text-start">
+                        <li id="minimo"><small>No mínimo, 6 caracteres</small></li>
+                        <li id="maiuscula"><small>Letras MAIÚSCULAS</small></li>
+                        <li id="especial"><small>Caracteres especiais</small></li>
+                        <li id="numero"><small>Números</small></li>
+                    </ul>
+                </div>
+
+                <small class="valid-feedback text-start">
+                    Senha ok!
+                </small>
+            </div>
+
+            <div class="form-floating mt-3">
+                <input type="password" id="confere-senha" name="confere-senha" class="form-control"
+                    placeholder="Confirmação da senha" required minlength="6" onkeyup="validarSenha()">
+                <label for="confere-senha"> Confirmação da senha </label>
+
+                <small class="invalid-feedback text-start">
+                    As senhas não são iguais.
+                </small>
+            </div>
+
+            <hr>
+
+            <div class="d-grid mt-4">
+                <input type="submit" value="Cadastrar" class="btn btn-success">
+                <input type="reset" value="Limpar campos" class="btn btn-outline-danger mt-3">
+            </div>
+
+        </form>
+
+    </div>
+
+
+    <script src="js/bootstrap.min.js"></script>
+
+    <script>
+        const campoData = document.getElementById("nasc");
+        const campoSenha = document.getElementById("senha");
+        const campoConfSenha = document.getElementById("confere-senha");
+        const minimo = document.getElementById("minimo");
+        const maiuscula = document.getElementById("maiuscula");
+        const especial = document.getElementById("especial");
+        const numero = document.getElementById("numero");
+
+        function validarSenha() {
+            campoConfSenha.minLength = campoSenha.value.length;
+
+            if (campoSenha.value === campoConfSenha.value) {
+                campoConfSenha.classList.add("is-valid");
+            } else {
+                campoConfSenha.minLength = 10000;
+            }
+
+            (campoSenha.value.length >= 6) ? minimo.style.color = "green" : minimo.style.color = "red";
+            (/[A-Z]/.test(campoSenha.value)) ? maiuscula.style.color = "green" : maiuscula.style.color = "red";
+            (/[^\w\s]/.test(campoSenha.value)) ? especial.style.color = "green" : especial.style.color = "red";
+            (/[\d]/.test(campoSenha.value)) ? numero.style.color = "green" : numero.style.color = "red";
+
+        }
+
+        function pegarData() {
+            let hoje = new Date();
+            let dataFormatada = (hoje.getFullYear() - 12) +
+                "-" +
+                ((hoje.getMonth() + 1 < 10) ?
+                    "0" + hoje.getMonth() + 1 :
+                    hoje.getMonth() + 1) +
+                "-" +
+                ((hoje.getDate() < 10) ?
+                    "0" + hoje.getDate() :
+                    hoje.getDate());
+
+            campoData.max = dataFormatada;
+        }
+
+        document.addEventListener("load", pegarData());
+    </script>
+
+    <script src="js/init-validation.js"></script>
+
 </body>
 
 </html>
