--- a/projeto_filme/web/index.html
+++ b/projeto_filme/web/index.html
@@ -1,66 +1,15 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style1.css"/>
     <title>Tela de Login</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f9;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
-        .login-container {
-            background-color: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            width: 300px;
-        }
-        .login-container h2 {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-        .input-field {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 10px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-        }
-        .button {
-            width: 100%;
-            padding: 10px;
-            margin-top: 10px;
-            border: none;
-            border-radius: 5px;
-            background-color: #4CAF50;
-            color: white;
-            font-size: 16px;
-            cursor: pointer;
-        }
-        .button:hover {
-            background-color: #45a049;
-        }
-        .button-secondary {
-            background-color: #007BFF;
-        }
-        .button-secondary:hover {
-            background-color: #0056b3;
-        }
-        .links {
-            display: flex;
-            justify-content: space-between;
-            margin-top: 15px;
-        }
-    </style>
 </head>
 <body>
-
+    <a href="profile.jsp">Perfil</a>
+    <a href="cad.html">Cad</a>
     <div class="login-container">
         <h2>Login</h2>
         <form action="/login" method="POST">
